--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ h1{
 
 <div class="wrapper">
 
+    <!-- LOGO -->
     <div class="logo">
-        <!-- LOGO IMAGE YAHAN LAGAO -->
-        <img src="https://via.placeholder.com/300" alt="Vikram Pratap Logo">
+        <img src="VP_logo_final.png" alt="Vikram Pratap Cricket Zone Logo">
     </div>
 
     <h1>Vikram Pratap <br>( Cricket Zone )</h1>
